<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/Sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sobrenome" />

        <EditText
            android:id="@+id/txtSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_Sobrenome"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_Email"
             />

        <TextView
            android:id="@+id/Telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefone" />

        <EditText
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_Telefone"/>

        <Button
            android:id="@+id/btnAdicionar"
            android:text="@string/btn_adicionar"
            android:onClick="adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="OnClick" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
